--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+html {
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
+  width: 100%;
+  color: #e6e5e8;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +17,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.background_main_color {
+  background-color: #f9a828;
+}
+
+.background_secondary_color {
+  background-color: #0b2e47;
+}
+
+.text_main_color {
+  color: #07617d;
+}
+
+.text_secondary_color {
+  color: #ececeb;
 }
